--- a/index.html
+++ b/index.html
@@ -4,8 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit burst</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.0/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@400;500;600;700&family=Lora:ital@0;1&family=Open+Sans:ital,wght@0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
+
+<!-- tailwind custom color -->
+<!-- <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+          }
+        }
+      }
+    }
+  </script> -->
+<!-- custom color finish -->
+<style>
+    .fonman{
+        font-family: 'Cormorant Unicase', serif;
+
+    }
+</style>
+
 </head>
-<body>
+
+<body >
+    <header>
+         
+
+    </header>
+
+    <!-- header finish -->
+    <main>
+
+
+    </main>
+    <!-- main finish -->
+
+    <footer>
+
+
+    </footer>
     
 </body>
 </html>
