--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
           </div>
           <!-- cowndow finis --></div>
           <div class="flex gap-2 pt-10">
-            <div class="w-[250px] h-[300px] bg-white pt-16 pl-10 drop-shadow-lg"><div><img src="./images/fruit5.png" alt=""></div><p class="text-slate-900 pl-12 pt-4">Dalim</p></div>
+            <div class="w-[250px] h-[300px] bg-white pt-16 pl-10 drop-shadow-lg"><div><img src="./images/fruit5.png" alt=""></div><p class="text-slate-900 pl-12 pt-4">Dalim</p><div class="pl-6"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div> <div class="pl-8"><button class="bg-orange-700 rounded w-16"><p class="text-slate-900">Details</p></button></div></div>
             <!-- 1f-->
-            <div class="w-[250px] h-[300px] bg-white pt-16 pl-16 drop-shadow-lg"><div><img src="./images/fruit6.png" alt=""></div><p class="text-slate-900 pl-9">Apple</p></div>
+            <div class="w-[250px] h-[300px] bg-white pt-16 pl-16 drop-shadow-lg"><div><img src="./images/fruit6.png" alt=""></div><p class="text-slate-900 pl-9">Apple</p> <div class="pl-3"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div><div class="pl-6"><button class="bg-orange-700 rounded w-16"><p class="text-slate-900">Details</p></button></div></div>
             <!-- 2f -->
-            <div class="w-[250px] h-[300px] bg-white pt-16 pl-10 drop-shadow-lg"><div><img src="./images/fruit7.png" alt=""></div><p class="text-slate-900 pl-12">Orange</p></div>
+            <div class="w-[250px] h-[300px] bg-white pt-16 pl-10 drop-shadow-lg"><div><img src="./images/fruit7.png" alt=""></div><p class="text-slate-900 pl-12">Orange</p><div class="pl-9"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div><div class="pl-10"><button class="bg-orange-700 rounded w-16"><p class="text-slate-900">Details</p></button></div></div>
             <!-- 3f -->
-            <div class="w-[250px] h-[300px] bg-white pt-16 pl-12 drop-shadow-lg"><div class="items-center"><img src="./images/fruit8.png" alt=""></div><p class="text-slate-900 pl-12">Dragon</p></div>
+            <div class="w-[250px] h-[300px] bg-white pt-16 pl-12 drop-shadow-lg"><div class="items-center"><img src="./images/fruit8.png" alt=""></div><p class="text-slate-900 pl-12">Dragon</p><div class="pl-10"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div> <div class="pl-10"><button class="bg-orange-700 rounded w-16"><p class="text-slate-900">Details</p></button></div></div>
             <!-- 4f -->
           </div>
           <!-- card finish -->
