--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
             <!-- 4f -->
           </div>
           <!-- card finish -->
+
+          <div class="pl-[458px] pt-36"><button class="btn-primary rounded-full"><p>Shop Now</p></button></div>
         
         
         </div>
