--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
           </div>
           <!-- card finish -->
 
-          <div class="pl-[458px] pt-36"><button class="btn-primary rounded-full"><p>Shop Now</p></button></div>
+          <div class="pl-[458px] pt-28"><button class="btn-primary rounded-full"><p>Shop Now</p></button></div>
         
         <!--first div finish  -->
-        <div class="w-[1000px] h-56 pt-16">
+        <div class="w-[1000px] h-56 pt-10">
           <div class="hero min-h-screen" style="background-image: url(./images/banner1.png);">
             <div class="hero-overlay bg-opacity-80"></div>
             <div class="hero-content text-center text-neutral-content pt-4">
@@ -198,6 +198,35 @@
     <!-- main finish -->
 
     <footer>
+      <div class="flex-y">
+        <div class="w-[1400px] h-[400px] bg-slate-900">
+          <div class="flex items-center pl-[550px] pt-20 gap-2"> <img src="./images/logo.png" alt=""> <p class="text-white text-2xl">Fruit Brust</p></div>
+
+          <!-- logo finish -->
+
+          <div class="flex gap-3 pl-[450px] pt-8">
+            <a href="">Home</a>
+            <a href="">About us</a>
+            <a href="">Shop</a>
+            <a href="">All fruits</a>
+            <a href="">Suports</a>
+            <a href="">My acount</a>
+          </div>
+          <!-- finish -->
+
+          <div class="flex gap-4 pl-[560px] pt-6">
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+
+          </div>
+
+          <!-- finish -->
+  
+        </div>
+      </div>
 
 
     </footer>
