--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a class="btn btn-ghost normal-case text-xl text-white">About us</a>
             <a class="btn btn-ghost normal-case text-xl text-white">Shop</a>
             <a class="btn btn-ghost normal-case text-xl text-white">All fruits</a></div>
-            <div class=" flex justify-center space-x-3 mr-44"><img src="./images/logo.png" alt="">
+            <div class=" flex justify-center space-x-3 mr-44 items-center"><img src="./images/logo.png" alt="">
               <p class="text-white text-center text-3xl">Fruit Burst</p>
             </div>
           </div>
